# PyPowerAutomate

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: deploy_docs.yaml  upload_pypi.yaml
actions/: actions.html  approval.html  base.html  condition.html  dataoperation.html  dropbox.html  flowmanagement.html  http.html  index.html  outlook365.html  sharepoint.html  statements.html  teams.html  time.html  variable.html
connections/: connections.html  connectors.html  index.html
flow/: flow.html  index.html
package/: index.html  package.html
src/pypowerautomate/: __main__.py
src/pypowerautomate/actions/: __init__.py  actions.py  approval.py  base.py  condition.py  dataoperation.py  dropbox.py  flowmanagement.py  http.py  outlook365.py  sharepoint.py  statements.py  teams.py  time.py  variable.py
src/pypowerautomate/connections/: __init__.py  connections.py  connectors.py
src/pypowerautomate/flow/: flow.py
src/pypowerautomate/package/: package.py
src/pypowerautomate/triggers/: __init__.py  trigger.py
triggers/: index.html  trigger.html
